src/app/index.css
@import 'tailwindcss';
@import 'tw-animate-css';

@font-face {
  font-family: 'Pretendard';
  src: url('/fonts/PretendardVariable.ttf') format('truetype-variations');
  font-weight: 100 900;
  font-display: swap;
}

@config "../../tailwind.config.ts";

@layer base {
  html {
    font-family: 'Pretendard', sans-serif;
  }
  body {
    color: var(--text-pri);
    background-color: var(--w-100);
    /* iOS scroll bounce prevention */
    overscroll-behavior: none;
    -webkit-overflow-scrolling: touch;
  }
  html::-webkit-scrollbar,
  body::-webkit-scrollbar {
    display: none;
  }
  html,
  body {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
}

/* Editor-only color preview */
@theme {
  --color-w-100: #ffffff;

  --color-g-10: #f7f9fc;
  --color-g-20: #e7e9f0;
  --color-g-30: #c5c8d2;
  --color-g-40: #979bab;
  --color-g-50: #727787;
  --color-g-60: #5d6270;
  --color-g-70: #4a4f59;
  --color-g-80: #383b45;
  --color-g-90: #272930;
  --color-g-100: #17171a;
  --color-g-black: #0f0f11;

  --color-runddy-blue: #04aef1;
  --color-runddy-pressed: #119bd1;
  --color-runddy-orange: #ff7534;
  --color-runddy-green: #2ac47e;
  --color-runddy-pink: #fd7fcd;
  --color-runddy-default: #04aef1;

  --color-text-pri: #0f0f11;
  --color-text-sec: #383b45;
  --color-text-ter: #5d6270;
  --color-text-placeholder: #979bab;

  --color-state-error: #f45b50;
}

[data-sonner-toast] {
  pointer-events: auto !important;
  /* max-width: min(92vw, 560px) !important; */
  /* width: fit-content !important; */
  white-space: normal !important;
  word-break: keep-all !important;
  overflow-wrap: break-word !important;

  position: fixed !important;
  left: 50% !important;
  bottom: calc(32px + env(safe-area-inset-bottom)) !important;
  transform: translateX(-50%) !important;
  gap: 10px !important;
  pointer-events: none !important;
  z-index: 9999 !important;
}

@layer components {
  [data-slot='dialog-content'],
  [data-slot='alert-dialog-content'] {
    max-width: 36rem !important;
  }

  [data-slot='dropdown-menu-content'] {
    max-width: 36rem;
  }
}

